Fix Height and layout of Config Provider Pages
Summary:
Reduced min-height to prevent action buttons from overflowing in y direction.
Changed datacenter string to datacenters.
Made the Regions, Zones and Hosts columns of same height for On-Prem Config.
{F3030}

{F3031}

{F3032}

{F3033}

{F3034}

Test Plan:
Go To config tabs in UI.
Verify layout looks as expected.

Reviewers: karthik, shawn, ram

Reviewed By: ram

Subscribers: sid, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D1633

--- a/managed/ui/src/components/config/OnPrem/OnPremiseProviderConfiguration.scss
+++ b/managed/ui/src/components/config/OnPrem/OnPremiseProviderConfiguration.scss
@@ -5,7 +5,8 @@
 
 .on-prem-provider-container {
   width: 100%;
-  height: 580px;
+  min-height: 500px;
+  height: 100%;
 
   .cell-container {
     position: relative;
@@ -117,7 +118,7 @@
   position: absolute;
   width: 100%;
   margin-left: 100%;
-  top: 0;
+  top: -10px;
   padding-left: 20px;
 }
 
